--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* body {
+  background-color: #;
+} */
+
+#root {
+  background-color: #f5f5f5;
+}
