--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,10 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-/* body {
-  background-color: #;
-} */
+/* Hide scrollbar for Chrome, Safari, and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
 
-#root {
+/* Remove inner button for input type number */
+@layer base {
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
+html {
   background-color: #f5f5f5;
 }
